# teaching-tools

./: .gitignore  README.md  aufgabe-bewertung.py  bewertung_merge.py  collect-timetable.py  collect_timetable.py  diffencoding.py  downgrade-by-origin.py  encoding-tables.py  fontdifftable.py  grade-sheet.md  ls-md.py  mailmerge.py  md-images.py  pyproject.toml  pyrightconfig.json  sgconfig.yml  similar-solutions.py  un2up.py  unify_source.py  video-thumbnail.py
sg/rules/: no-print-when-logging.yml
teaching/: aufgabe_bewertung.py  aushang.py  bewertung_merge.py  choice.py  collectbymd.py  controls.json  course_info.py  diffencoding.py  downgrade-by-origin.py  encoding-desc.tsv  encoding_tables.py  fix_surrogates.py  fontdifftable.py  htmlindex.py  kdenlive_guide_table.py  klausur_feedback.py  ls_md.py  mailmerge.py  mix_words.py  mltmove.py  prepare_grade_table.py  run_with_server.py  similar_solutions.py  sql2er.py  svg_label_to_id.py  svgsteps.py  tabletobewertung.py  tsvformat.py  un2up.py  unify_source.py  visualise_make.py  xfiles_graph.py  xml2dot.py  xml2dot.xsl  xml_augment_attr.py
