[tool.pdm.dev-dependencies]
dev = ["matplotlib-backend-kitty<3.0.0,>=2.1.2", "lxml-stubs>=0.5.1"]

[tool.pdm.build]
includes = ["teaching"]

[tool.uv]
dev-dependencies = ["lxml-stubs>=0.5.1", "matplotlib-backend-kitty>=2.1.2"]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project]
authors = [{ name = "Thorsten Vitt", email = "thorsten.vitt@uni-wuerzburg.de" }]
requires-python = ">=3.10"
dependencies = [
  "blessings<2.0,>=1.7",
  "more-itertools<9.0.0,>=8.13.0",
  "readchar<4.0.0,>=3.0.5",
  "matplotlib<4.0.0,>=3.5.2",
  "pandas>=2.2.3",
  "click<9.0.0,>=8.1.3",
  "lxml>=4.9.1",
  "ruamel-yaml<1.0.0,>=0.17.21",
  "pymustache<1.0,>=0.3",
  "tabulate<1.0.0,>=0.8.10",
  "PyPDF2<3.0.0,>=2.7.0",
  "astor<1.0.0,>=0.8.1",
  "networkx>=2.8.5,<3.0.0",
  "scipy<2.0.0,>=1.10.1",
  "tqdm<5.0.0,>=4.64.1",
  "openpyxl<4.0.0,>=3.1.2",
  "typer<1.0.0,>=0.9.0",
  "html5lib<2.0,>=1.1",
  "humanize<5.0.0,>=4.9.0",
  "colour<1.0.0,>=0.1.5",
  "chevron>=0.14.0",
  "odfpy>=1.4.1",
  "sqlalchemy>=2.0.36",
  "pygraphviz>=1.14",
  "cyclopts>=2.9.9",
  "charset-normalizer>=3.4.1",
  "shtab>=1.7.2",
]
name = "teaching-tools"
version = "0.9.2"
description = "Thorstens Teaching Tools"

[project.scripts]
aufgabe-bewertung = "teaching.aufgabe_bewertung:main"
table2bewertung = "teaching.tabletobewertung:app"
aushang = "teaching.aushang:main"
bewertung-merge = "teaching.bewertung_merge:main"
diffencoding = "teaching.diffencoding:report_diff"
encoding-tables = "teaching.encoding_tables:main"
fontdifftable = "teaching.fontdifftable:main"
kdenlive-guide-table = "teaching.kdenlive_guide_table:main"
ls-md = "teaching.ls_md:main"
mailmerge = "teaching.mailmerge:main"
mltmove = "teaching.mltmove:move_resources"
similar-solutions = "teaching.similar_solutions:main"
unify-source = "teaching.unify_source:main"
un2up = "teaching.un2up:main"
video-thumbnail = "teaching.video_thumbnail:extract_thumbnail"
xfiles-graph = "teaching.xfiles_graph:main"
mix-words = "teaching.mix_words:main"
fix-surrogates = "teaching.fix_surrogates:app"
htmlindex = "teaching.htmlindex:app"
run-with-server = "teaching.run_with_server:app"
klausur-feedback = "teaching.klausur_feedback:app"
xml-augment-attr = "teaching.xml_augment_attr:app"
xml2dot = "teaching.xml2dot:main"
sql2er = "teaching.sql2er:main"
vis-make = "teaching.visualise_make:app"
tsvformat = "teaching.tsvformat:app"
collect-by-md = "teaching.collectbymd:app"
choice = "teaching.choice:main"
